Get rid of grey bar by steps on IE This looked broken to lots of people and makes more sense to make this just look like a normal numbered list rather than keep receiving bug reports from something that looks odd and non-standard.

--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -554,14 +554,9 @@ article ol.steps {
 
     @include ie-lte(8) {
       list-style-type: decimal;
-      margin: 0;
-      padding: 0;
+      margin-left: 1.5em;
+      padding-left: 0;
     }
-  }
-
-  @include ie-lte(8) {
-    border-left: solid 3px #ccc;
-    padding: 0 0 0 2.5em;
   }
 }
 
